--- a/site-backend/package.json
+++ b/site-backend/package.json
@@ -16,14 +16,13 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-fastify": "^6.6.7",
     "mongoose": "^5.6.13",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
-    "@types/express": "4.16.1",
     "@types/mongoose": "^5.5.17",
     "@types/node": "11.13.4",
     "ts-node": "8.1.0",
