--- a/site-frontend/package.json
+++ b/site-frontend/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@cookieseater/vue-yandex-share": "^0.2.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
@@ -22,6 +21,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "tachyons": "^4.11.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
