--- a/site-frontend/package.json
+++ b/site-frontend/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.9",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-infinite-loading": "^2.4.4",
     "vue-router": "^3.0.3",
     "vue-yandex-metrika": "^1.8.3"
   },
